{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 192,
  "lineage": "09c3f175-402b-8e9b-d1a5-cb976194649a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00b3aa8a93dd09c13",
            "arn": "arn:aws:ec2:ap-south-1:328356076420:instance/i-03f4a8ba37702011f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03f4a8ba37702011f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AWS key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0143c7c061ea9fee4",
            "private_dns": "ip-10-0-1-183.ap-south-1.compute.internal",
            "private_ip": "10.0.1.183",
            "public_ip": "13.232.143.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-08a5e8236d1a05f5b",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02704d58c69b1073f",
            "tags": {
              "Name": "Nat_Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d903b38fab7d9f2c"
            ]
          },
          "dependencies": [
            "aws_security_group.nat",
            "aws_subnet.main",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328356076420:internet-gateway/igw-00bc455305f263e6e",
            "id": "igw-00bc455305f263e6e",
            "owner_id": "328356076420",
            "tags": {
              "Name": "terraform_igw"
            },
            "vpc_id": "vpc-09ad474cbbb618cb8"
          },
          "dependencies": [
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08e0a382bad1897b0",
            "owner_id": "328356076420",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-03f4a8ba37702011f",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0143c7c061ea9fee4",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_private_routetable"
            },
            "vpc_id": "vpc-09ad474cbbb618cb8"
          },
          "dependencies": [
            "aws_instance.nat",
            "aws_security_group.nat",
            "aws_subnet.main",
            "aws_vpc.myapp_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08e8654d6c2a30399",
            "owner_id": "328356076420",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00bc455305f263e6e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_public_routetable"
            },
            "vpc_id": "vpc-09ad474cbbb618cb8"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0976b2ff6f7b084e5",
            "route_table_id": "rtb-08e8654d6c2a30399",
            "subnet_id": "subnet-02704d58c69b1073f"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_subnet.main",
            "aws_vpc.myapp_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcde1294a7fc23e6",
            "route_table_id": "rtb-08e8654d6c2a30399",
            "subnet_id": "subnet-090eea884f309f04b"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_subnet.main",
            "aws_vpc.myapp_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cdb16f001b2598d0",
            "route_table_id": "rtb-08e8654d6c2a30399",
            "subnet_id": "subnet-02d8bbcc989577614"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_subnet.main",
            "aws_vpc.myapp_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051691a9994481ae3",
            "route_table_id": "rtb-08e0a382bad1897b0",
            "subnet_id": "subnet-0021f618ec784c694"
          },
          "dependencies": [
            "aws_instance.nat",
            "aws_route_table.prt",
            "aws_security_group.nat",
            "aws_subnet.main",
            "aws_subnet.private",
            "aws_vpc.myapp_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089a8be5ea08b23e4",
            "route_table_id": "rtb-08e0a382bad1897b0",
            "subnet_id": "subnet-0b8866ef9c76e2af0"
          },
          "dependencies": [
            "aws_instance.nat",
            "aws_route_table.prt",
            "aws_security_group.nat",
            "aws_subnet.main",
            "aws_subnet.private",
            "aws_vpc.myapp_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328356076420:security-group/sg-0d903b38fab7d9f2c",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d903b38fab7d9f2c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "nat_sg",
            "name_prefix": "",
            "owner_id": "328356076420",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-09ad474cbbb618cb8"
          },
          "dependencies": [
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328356076420:subnet/subnet-02704d58c69b1073f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02704d58c69b1073f",
            "map_public_ip_on_launch": true,
            "owner_id": "328356076420",
            "tags": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-09ad474cbbb618cb8"
          },
          "dependencies": [
            "aws_vpc.myapp_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328356076420:subnet/subnet-090eea884f309f04b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-090eea884f309f04b",
            "map_public_ip_on_launch": true,
            "owner_id": "328356076420",
            "tags": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-09ad474cbbb618cb8"
          },
          "dependencies": [
            "aws_vpc.myapp_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328356076420:subnet/subnet-02d8bbcc989577614",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-02d8bbcc989577614",
            "map_public_ip_on_launch": true,
            "owner_id": "328356076420",
            "tags": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-09ad474cbbb618cb8"
          },
          "dependencies": [
            "aws_vpc.myapp_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328356076420:subnet/subnet-0021f618ec784c694",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0021f618ec784c694",
            "map_public_ip_on_launch": false,
            "owner_id": "328356076420",
            "tags": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-09ad474cbbb618cb8"
          },
          "dependencies": [
            "aws_vpc.myapp_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328356076420:subnet/subnet-0b8866ef9c76e2af0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-0b8866ef9c76e2af0",
            "map_public_ip_on_launch": false,
            "owner_id": "328356076420",
            "tags": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-09ad474cbbb618cb8"
          },
          "dependencies": [
            "aws_vpc.myapp_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myapp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328356076420:vpc/vpc-09ad474cbbb618cb8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09c4fc7ffbf0cc0ad",
            "default_route_table_id": "rtb-009d053b48905c7ba",
            "default_security_group_id": "sg-035574f7017ff0067",
            "dhcp_options_id": "dopt-9313d1f8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09ad474cbbb618cb8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-009d053b48905c7ba",
            "owner_id": "328356076420",
            "tags": {
              "City": "Bangalore",
              "Location": "USA",
              "Name": "Terraform-Ravivpc"
            }
          }
        }
      ]
    }
  ]
}